example/lib/src/arbs/errors/app_ur.arb
{
  "@@locale": "ur",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "ایک خرابی پیش آئی",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "ایک غیر متوقع خرابی واقع ہوئی",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "بگ رپورٹ کامیابی سے بھیجی گئی.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}